--- a/contactus.html
+++ b/contactus.html
@@ -1,5 +1,5 @@
 
-</html>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Info</title>
 </head>
-<body bgcolor="">
+<body>
     <div>
         <h1>shop</h1>
         <ul>
