--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body bgcolor="mistyrose">
     <center><h1><u>Home</u></h1></center>
     <a href="services.html">services</a>
-    <a href="contactus.html">contactus</a>
+    <a href="contactinfo.html">contactus</a>
     <a href="Ourblog.html">Ourblog</a>
 </body>
 </html>
