--- a/services.html
+++ b/services.html
@@ -3,10 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Picture and Description</title>
+    <style>
+        /* CSS for layout */
+        .container {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .description {
+            width: 100%;
+            margin-bottom: 20px;
+        }
+
+        .image {
+            width: calc(33.33% - 10px); /* Adjust width as needed */
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .image img {
+            max-width: 100%;
+            height: auto;
+        }
+        body{
+            background-image:url(back22.avif);
+            background-size: cover;
+            background-position: center;
+        }
+    </style>
 </head>
 <body>
- <h>"services"</h>
- <a href="home.html">srvices</a>   
+    <div class="container">
+        <div class="description">
+            <h2><i>crafted with love</i></h2><i>this candles are very precious than every candles because we made it for love</i></p>
+        </div>
+        <div class="image">
+            <img src="image2.jfif" alt="Example Image 1"><p><i>sparklingcandles</i></p>
+        </div>
+        <div class="image">
+            <img src="image3.jfif" alt="Example Image 2"><p><i>lightningcandles</i></p>
+        </div>
+        <div class="image">
+            <img src="image4.jfif" alt="Example Image 3"><p><i>shopcandles</i></p>
+        </div>
+    </div>
 </body>
 </html>
