--- a/home.html
+++ b/home.html
@@ -10,5 +10,6 @@
     <a href="services.html">services</a>
     <a href="contactinfo.html">contact us</a>
     <a href="Ourblog.html">Ourblog</a>
+     <a href="teams.html">Teams</a>
 </body>
 </html>
