--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="services.html">services</a>
     <a href="contactinfo.html">contactus</a>
     <a href="Ourblog.html">Ourblog</a>
+    <a href="teams.html">teams</a>
 </body>
 </html>
 
