--- a/home.html
+++ b/home.html
@@ -7,9 +7,11 @@
 </head>
 <body bgcolor="mistyrose">
     <center><h1><u>Home</u></h1></center>
-    <a href="services.html">services</a>
+    <div> <a href="services.html">services</a>
     <a href="contactinfo.html">contact us</a>
     <a href="Ourblog.html">Ourblog</a>
      <a href="teams.html">Teams</a>
+    </div>
+   
 </body> 
 </html>
